# kai-rs

./: Cargo.toml  README.md
examples/: load_model_and_generate.rs
src/: client.rs  generation_response.rs  generation_settings.rs  lib.rs  model.rs  prelude.rs  string_response.rs
src/api/: mod.rs  v1.rs
