[package]
name = "kai-rs"
version = "0.1.0"
authors = ["Connor McCarroll <connor@mccarroll.dev>"]
edition = "2021"
description = "A Rust library for using large language models via KoboldAI"
readme = "README.md"
repository = "https://github.com/Pyroglyph/kai-rs/"
license = "LGPL-3.0-only"
keywords = ["ai", "machine-learning", "koboldai", "llm", "chatgpt"]
categories = ["api-bindings"]

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
